--- a/Week7/Task/src/pages/Login/login.css
+++ b/Week7/Task/src/pages/Login/login.css
@@ -8,11 +8,9 @@
 
 }
 
-
-
 .signup-img{
-    width: 40%;
-    height: 60%;
+    width: 50%;
+    height: 70%;
 }
 .signup-img img{
     width: 100%;
@@ -67,22 +65,21 @@ label::after{
 
 .button-family-1{
     width: 600px;
-    margin:20px -12px;
+    margin:20px 0px;
     display: flex;
     justify-content: center;
     border-top: 1px solid rgba(0, 0, 0, 0.334);
-
-   
-    
 }
+
+
 .button-family-1 .btn{
     padding: 10px 15px;
     margin-top: 10px;
     margin-right: 10px;
     font-size: 15px;
     background-color: inherit;
-    color: #fff;
-    border: 1px solid #fff;
+    color: #000;
+    border: 1px solid #000;
     border-radius: 5px;
     cursor: pointer;
     transition: transform 0.1s ease-in-out;
@@ -100,9 +97,9 @@ label::after{
     font-size: 15px;
     font-weight: 400;
     background-color: inherit;
+    color: black;
     border: 1px solid #fff;
     border-radius: 5px;
-    color: #fff;
     cursor: pointer;
 }
 
@@ -120,7 +117,7 @@ label::after{
 
 .user-info-form-login{
     width: 600px;
-    height: 300px;
+    height: 250px;
     margin: 20px auto;
     padding: 10px;
     background-color: inherit;
@@ -129,8 +126,34 @@ label::after{
     box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.437);
 }
 
-@media screen  and (max-width: 600px) {
-    .user-info{
-        flex-direction: column;
+@media screen and (max-width:600px) {
+    .signup-img{
+        width: 90vw;
+        height: 50%;
+    }
+    .signup-img img{
+        width: 80%;
+        height: 100%;
+    }
+    .user-info-form-login{
+        width: 90vw;
+        height: 250px;
+        margin: 20px auto;
+        padding: 10px;
+    }
+    .username , .number , .email , .address ,.state ,.password, .confirmPassword{
+        width: 83%;
+        margin: 5px;
+        padding: 5px;
+        display: block;
+    }
+    .button-family-1{
+        width: 100%;
+        margin: 0;
+        display: flex;
+        justify-content: center;    
+    }
+    .form-control{
+        margin: 10px auto;
     }
 }
