--- a/Week7/Task/src/pages/SignUp/signup.css
+++ b/Week7/Task/src/pages/SignUp/signup.css
@@ -12,7 +12,7 @@
 
 .signup-img{
     width: 40%;
-    height: 60%;
+    height: 70%;
 }
 .signup-img img{
     width: 100%;
@@ -20,7 +20,7 @@
     object-fit: contain;
 }
 
-.user-info-form{
+.user-info-form-signup{
     width: 600px;
     height: 500px;
     margin: 20px auto;
@@ -32,7 +32,7 @@
     overflow-y: scroll;
     overflow-x: hidden;
 }
-.user-info-form::-webkit-scrollbar{
+.user-info-form-signup::-webkit-scrollbar{
     display: none;
 }
 label{
@@ -81,8 +81,8 @@ label::after{
     margin-right: 10px;
     font-size: 15px;
     background-color: inherit;
-    color: #fff;
-    border: 1px solid #fff;
+    color: #000;
+    border: 1px solid #000;
     border-radius: 5px;
     cursor: pointer;
     transition: transform 0.1s ease-in-out;
@@ -102,7 +102,7 @@ label::after{
     background-color: inherit;
     border: 1px solid #fff;
     border-radius: 5px;
-    color: #fff;
+    color: black;
     cursor: pointer;
 }
 
@@ -129,8 +129,36 @@ label::after{
     box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.437);
 }
 
-@media screen  and (max-width: 600px) {
-    .user-info{
-        flex-direction: column;
+@media screen and (max-width:600px) {
+    .signup-img{
+
+        width: 90vw;
+        height: 50%;
+        margin-top: 20px;
+    }
+    .signup-img img{
+        width: 100%;
+        height: 100%;
+    }
+    .user-info-form-signup{
+        width: 90vw;
+        height: 300px;
+        margin: 20px auto;
+        padding: 10px;
+    }
+    .username , .number , .email , .address ,.state ,.password, .confirmPassword{
+        width: 83%;
+        margin: 5px;
+        padding: 5px;
+        display: block;
+    }
+    .button-family-1{
+        width: 100%;
+        margin: 0;
+        display: flex;
+        justify-content: center;    
+    }
+    .form-control{
+        margin: 10px auto;
     }
 }
